# concore

./: .gitignore  Dockerfile  Dockerfile.java  Dockerfile.m  Dockerfile.py  Dockerfile.sh  Dockerfile.v  README.md  TestLiteralEval.java  abort_rebase.py  complete_push.py  complete_rebase.sh  concore.hpp  concore.py  concore_default_maxtime.m  concore_initval.m  concore_iport.m  concore_oport.m  concore_read.m  concore_write.m  concoredocker.hpp  concoredocker.java  concoredocker.py  contribute.py  copy_with_port_portname.py  fix_and_push.bat  mkconcore.py  pyproject.toml  requirements-ci.txt  requirements.txt  setup.py  setup_branch.ps1  startserver  startserver.bat
0mq/: comm_node.py  distributed_client.graphml  fileOnlyCommunication.graphml  firstNode.py  funbody.py  funbody2.py  funbody_distributed.py  funbody_zmq.py  funbody_zmq2.py  funcall.py  funcall2.py  funcall_distributed.py  funcall_zmq.py  funcall_zmq2.py  secondNode.py  semicyclic.graphml  test0mq3.graphml  test0mq4.graphml  test0mqbody2.graphml  thirdNode.py
concore.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
concore_cli/: README.md  cli.py
demo/: controller2knob.py  controllerFile.py  pm.py  pmFile.py
fri/: Dockerfile
measurements/: A.py  B.py  C.py  ZeroMQOnly.graphml  comm_node_test.py  cpymax_test.py  fileOnlyCommunication.graphml  pmpymax_test.py  readme.md
nintan/: powermetermax.py
ratc/: learn3.py
tests/: conftest.py  test_cli.py  test_concore.py  test_concoredocker.py  test_graph.py  test_tool_config.py  test_validation.py
testsou/: concore.py  (+4 more)
(+56 files in other folders)
